[package]

name = "redlock"
version = "1.1.0"
authors = ["Jan-Erik Rediger <badboy@archlinux.us>"]

keywords = ["distributed", "locking"]
description = "Implementation of the distributed locking mechanism built on top of Redis"

homepage = "https://github.com/badboy/redlock-rs"
repository = "https://github.com/badboy/redlock-rs"

license = "BSD-3-Clause"
readme = "README.md"
edition = "2018"

[dependencies]
redis = { version = "0.22", features = ["tokio-comp"] }
rand = "0.8"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
testcontainers = { git = "https://github.com/testcontainers/testcontainers-rs", branch = "dev"}
once_cell = "1.7"
anyhow = "1.0"
